test/error/TypeRangeMinLimit.ci
public static class Test
{
	public static bool Run()
	{
		-5000000000 .. 100 i; //ERROR: Only 32-bit ranges supported
		return true;
	}
}
